<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical">

  <android.support.design.widget.AppBarLayout
    android:id="@+id/toolbar_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      />
  </android.support.design.widget.AppBarLayout>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:gravity="center"
      >

      <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/avatar"
        android:layout_margin="26dp"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

      <TextView
        android:id="@+id/user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="16sp"
        android:textAlignment="center"/>

      <LinearLayout
        android:id="@+id/token_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        />


      <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feature_profile_first_name"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:inputType="textCapWords"/>

      <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feature_profile_last_name"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:inputType="textCapWords"/>

      <EditText
        android:id="@+id/birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feature_profile_birthday"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:inputType="date"/>

      <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/feature_profile_save"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        />

      <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/feature_profile_password"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        />

      <Button
        android:id="@+id/save_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/feature_profile_save"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        />

      <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/feature_profile_logout"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        />

    </LinearLayout>
  </ScrollView>


</LinearLayout>